--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,6 +48,9 @@ signs:
       - "--detach-sign"
       - "${artifact}"
 release:
+  github:
+    owner: uanid
+    name: terraform-provider-fox
 # If you want to manually examine the release before its live, uncomment this line:
 # draft: true
 changelog:
